OldArchive/8ffd16ec674798a289833e0b11aaf169-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:54:17: error: use of deleted function 'A::A(const A&)'
   A m_a3[2]{1, 2};       // InitializerList_t(1, 2)                                             => each element is copy initialized:
                 ^
main.cpp:12:3: error: declared here
   A(const A &) = delete; // { cout << "A(const A &)" << endl; }
   ^
main.cpp:54:17: error: use of deleted function 'A::A(const A&)'
   A m_a3[2]{1, 2};       // InitializerList_t(1, 2)                                             => each element is copy initialized:
                 ^
main.cpp:12:3: error: declared here
   A(const A &) = delete; // { cout << "A(const A &)" << endl; }
   ^
main.cpp:56:22: error: use of deleted function 'A::A(const A&)'
   A m_a4[2]{{1, 2}, 3};    // InitializerList_t(InitializerList_t(1, 2), 3)                       => each element is copy initialized:
                      ^
main.cpp:12:3: error: declared here
   A(const A &) = delete; // { cout << "A(const A &)" << endl; }
   ^
main.cpp:62:20: error: use of deleted function 'A::A(const A&)'
   A m_a7[2] = {1, 2};      // InitializerList_t(1, 2)->MakeExpression()                           => copy of static_cast<const A (&)[2]>({A{1}, A{2}}):
                    ^
main.cpp:12:3: error: declared here
   A(const A &) = delete; // { cout << "A(const A &)" << endl; }
   ^
main.cpp:62:20: error: use of deleted function 'A::A(const A&)'
   A m_a7[2] = {1, 2};      // InitializerList_t(1, 2)->MakeExpression()                           => copy of static_cast<const A (&)[2]>({A{1}, A{2}}):
                    ^
main.cpp:12:3: error: declared here
   A(const A &) = delete; // { cout << "A(const A &)" << endl; }
   ^
main.cpp: In constructor 'X::X()':
main.cpp:25:3: error: use of deleted function 'A::A(const A&)'
   {
   ^
main.cpp:12:3: error: declared here
   A(const A &) = delete; // { cout << "A(const A &)" << endl; }
   ^
main.cpp:25:3: error: use of deleted function 'A::A(const A&)'
   {
   ^
main.cpp:12:3: error: declared here
   A(const A &) = delete; // { cout << "A(const A &)" << endl; }
   ^
main.cpp:25:3: error: use of deleted function 'A::A(const A&)'
   {
   ^
main.cpp:12:3: error: declared here
   A(const A &) = delete; // { cout << "A(const A &)" << endl; }
   ^
main.cpp:25:3: error: use of deleted function 'A::A(const A&)'
   {
   ^
main.cpp:12:3: error: declared here
   A(const A &) = delete; // { cout << "A(const A &)" << endl; }
   ^
main.cpp:25:3: error: use of deleted function 'A::A(const A&)'
   {
   ^
main.cpp:12:3: error: declared here
   A(const A &) = delete; // { cout << "A(const A &)" << endl; }
   ^
main.cpp:25:3: error: use of deleted function 'A::A(const A&)'
   {
   ^
main.cpp:12:3: error: declared here
   A(const A &) = delete; // { cout << "A(const A &)" << endl; }
   ^
main.cpp: In constructor 'X::X(int)':
main.cpp:39:21: error: use of deleted function 'A::A(const A&)'
     , m_a7{{1, 2}, 3}   // InitializerList_t(InitializerList_t(1, 2), 3)                       => each element is copy initialized:
                     ^
main.cpp:12:3: error: declared here
   A(const A &) = delete; // { cout << "A(const A &)" << endl; }
   ^
main.cpp:39:21: error: use of deleted function 'A::A(const A&)'
     , m_a7{{1, 2}, 3}   // InitializerList_t(InitializerList_t(1, 2), 3)                       => each element is copy initialized:
                     ^
main.cpp:12:3: error: declared here
   A(const A &) = delete; // { cout << "A(const A &)" << endl; }
   ^
main.cpp:39:21: error: use of deleted function 'A::A(const A&)'
     , m_a7{{1, 2}, 3}   // InitializerList_t(InitializerList_t(1, 2), 3)                       => each element is copy initialized:
                     ^
main.cpp:12:3: error: declared here
   A(const A &) = delete; // { cout << "A(const A &)" << endl; }
   ^
main.cpp:39:21: error: use of deleted function 'A::A(const A&)'
     , m_a7{{1, 2}, 3}   // InitializerList_t(InitializerList_t(1, 2), 3)                       => each element is copy initialized:
                     ^
main.cpp:12:3: error: declared here
   A(const A &) = delete; // { cout << "A(const A &)" << endl; }
   ^
main.cpp:39:21: error: use of deleted function 'A::A(const A&)'
     , m_a7{{1, 2}, 3}   // InitializerList_t(InitializerList_t(1, 2), 3)                       => each element is copy initialized:
                     ^
main.cpp:12:3: error: declared here
   A(const A &) = delete; // { cout << "A(const A &)" << endl; }
   ^
main.cpp:39:21: error: use of deleted function 'A::A(const A&)'
     , m_a7{{1, 2}, 3}   // InitializerList_t(InitializerList_t(1, 2), 3)                       => each element is copy initialized:
                     ^
main.cpp:12:3: error: declared here
   A(const A &) = delete; // { cout << "A(const A &)" << endl; }
   ^
main.cpp:39:21: error: use of deleted function 'A::A(const A&)'
     , m_a7{{1, 2}, 3}   // InitializerList_t(InitializerList_t(1, 2), 3)                       => each element is copy initialized:
                     ^
main.cpp:12:3: error: declared here
   A(const A &) = delete; // { cout << "A(const A &)" << endl; }
   ^
main.cpp:39:21: error: use of deleted function 'A::A(const A&)'
     , m_a7{{1, 2}, 3}   // InitializerList_t(InitializerList_t(1, 2), 3)                       => each element is copy initialized:
                     ^
main.cpp:12:3: error: declared here
   A(const A &) = delete; // { cout << "A(const A &)" << endl; }
   ^
main.cpp:39:21: error: use of deleted function 'A::A(const A&)'
     , m_a7{{1, 2}, 3}   // InitializerList_t(InitializerList_t(1, 2), 3)                       => each element is copy initialized:
                     ^
main.cpp:12:3: error: declared here
   A(const A &) = delete; // { cout << "A(const A &)" << endl; }
   ^
main.cpp: In function 'int main()':
main.cpp:71:32: error: use of deleted function 'A::A(const A&)'
   const A (&a1)[2] = {{1, 2}, 3};
                                ^
main.cpp:12:3: error: declared here
   A(const A &) = delete; // { cout << "A(const A &)" << endl; }
   ^
